# sentinel

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2b7c91e4d8aa_add_case_management.py  47f2c9e18b01_add_upload_audits.py  646eda206afb_initial_schema.py  8c8f0cf1b7b4_add_watchlist_entries.py  f87d0110e2ae_add_account_geo_enrichment_table.py
api/: config.py  main.py
api/db/: database.py  models.py
api/routers/: auth.py  cases.py  dashboard.py  drift.py  entities.py  health.py  investigate.py  models.py  queue.py  replay.py  scoring.py  tuner.py  upload.py  watchlists.py
api/schemas/: auth.py  queue.py  scoring.py
api/services/: auth.py  model_service.py  security.py
api/tests/: conftest.py  test_auth.py  test_health.py  test_scoring_queue.py
data/raw/: paysim.csv.dvc
docs/: data.md  decisions.md  model_card.md
frontend/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/: AppShell.tsx  CommandMenu.tsx  CreateCaseDialog.tsx  GeoMap.tsx  Heatmap.tsx  LiveTicker.tsx  ReplayControl.tsx  RequireAuth.tsx  ShapWaterfall.tsx  Sidebar.tsx  Toaster.tsx  TopBar.tsx
frontend/src/components/ui/: Badge.tsx  BigNumber.tsx  Button.tsx  Card.tsx  ChartContainer.tsx  Metric.tsx  Sparkline.tsx  States.tsx
frontend/src/lib/: animate.ts  api.ts  auth.ts  cn.ts  format.ts  hooks.ts  theme.ts  toast.ts  types.ts
frontend/src/pages/: Audit.tsx  CaseDetail.tsx  Cases.tsx  Dashboard.tsx  Drift.tsx  EntityProfile.tsx  Investigate.tsx  Login.tsx  Models.tsx  Placeholder.tsx  Queue.tsx  Settings.tsx  TransactionDetail.tsx  Tuner.tsx  Upload.tsx  Watchlists.tsx
infra/nginx/: upload_limits.conf
ml/features/: aggregates.py  pipeline.py  schemas.py  splits.py  transforms.py
ml/tests/: test_aggregates.py  test_schemas.py  test_splits.py  test_transforms.py
ml/training/: metrics.py  train.py
models/: lightgbm_final_test_report.json  lightgbm_val_curves.json  logreg_val_curves.json  xgboost_val_curves.json
scripts/: final_eval.py  seed_demo.py  seed_geo.py  seed_transactions.py
