[project]
name = "sentinel"
version = "0.1.0"
description = "Production-grade fraud detection platform"
authors = [{ name = "Robert Jean Pierre" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "mlflow>=2.18,<3",
    "pandas>=2.2,<3",
    "pandera[pandas]>=0.31.1",
    "pyarrow>=15,<20",
    "scikit-learn>=1.5,<2",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "dvc[s3]>=3.55.0",
    "kaggle>=2.1.2",
]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["notebooks", "frontend", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["notebooks/", "frontend/", ".venv/"]

[[tool.mypy.overrides]]
module = ["shap.*", "lightgbm.*", "xgboost.*", "imblearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["ml/tests", "api/tests", "tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--strict-markers", "--tb=short", "--cov-report=term-missing"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]
